# music_cpp

./: .ycm_extra_conf.py  CMakeLists.txt  Interface.cpp  Interface.h  main.cpp  vim
cpp/: component.cpp  component.h
cpp/components/: Awesome.cpp  Awesome.h  MainWindow.cpp  MainWindow.h  PlayBar.cpp  PlayBar.h  ProgressBar.cpp  ProgressBar.h  TitleBar.cpp  TitleBar.h  WButton.cpp  WButton.h
cpp/models/: Song.cpp  Song.h
res/: res.qrc
